--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "vue-round-date",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "dist/vue-round-date.js",
+  "author": "zhumengle",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -18,9 +21,11 @@
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "eslint-plugin-vue": "^5.0.0"
   },
+  "files": [
+      "dist"
+    ],
   "eslintConfig": {
     "root": true,
     "env": {
